--- a/layout/default/meta_head.html
+++ b/layout/default/meta_head.html
@@ -1,53 +1,32 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html lang="en-AU">
 	<head>
-		<title><print meta=seoTitle></title>
 		<base href="<print meta=url>">
 		<meta charset="UTF-8">
+		<title><print meta=seoTitle></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=2">
-		<meta name="application-name" content="AuroraCMS">
-		<meta name="keywords" content="<print meta=seoKeywords>">
-		<meta name="description" content="<print meta=seoDescription>">
-		<meta name="subject" content="<print meta=seoCaption>">
 		<meta name="robots" content="<print meta=metaRobots>">
+		<meta name="description" content="<print meta=seoDescription>">
 		<meta name="google" content="nositelinkssearchbox">
-		<meta name="abstract" content="<print meta=seoCaption>">
-		<meta name="summary" content="<print meta=seoCaption>">
 		<meta name="url" content="<print meta=canonical>">
 		<meta name="identifier-url" content="<print meta=url>">
-		<meta name="distribution" content="global">
-		<meta name="rating" content="general">
-		<meta name="microid" content="<print microid>">
-		<meta name="google-site-verification" content="<print google_verification>">
-		<meta name="msvalidate.01" content="<print seo_msvalidate>">
-		<meta name="yandex-verification" content="<print seo_yandexverification>">
-		<meta name="alexaVerifyID" content="<print seo_alexaverification>">
-		<meta name="p:domain_verify" content="<print seo_domain_verify>">
-		<meta name="geo.region" content="<print geo_region>">
-		<meta name="geo.placename" content="<print geo_placename>">
-		<meta name="geo.position" content="<print geo_position>">
-		<meta name="ICBM" content="<print geo_position>">
+		<print site_verifications>
 		<link rel="alternate" media="all" href="<print meta=canonical>">
 		<link rel="alternate" type="application/rss+xml" title="<print meta=seoTitle>" href="<print meta=rss>">
 		<link rel="canonical" href="<print meta=canonical>">
-		<link rel="alternate" href="<print meta=canonical>" hreflang="en-au">
+		<link rel="alternate" href="<print meta=canonical>" hreflang="en-AU">
 		<link rel="author" href="humans.txt">
 		<link rel="icon" href="<print meta=favicon>" type="image/png">
 		<script type='application/ld+json'>{"@context":"http://schema.org","@type":"WebSite","url":"<print meta=canonical>","name":"<print meta=seoTitle>","author":{"@type":"Person","name":"<print meta=author>"},"description":"<print meta=seoDescription>","publisher":"<print meta=seoTitle>","potentialAction":{"@type":"SearchAction","target":"<print meta=url>search/{search_term}","query-input":"required name=search_term"}}</script>
-		<meta property="og:url" content="<print meta=canonical>">
+		<meta property="og:locale" content="en-AU">
 		<meta property="og:type" content="<print meta=ogType>">
 		<meta property="og:title" content="<print meta=seoTitle>">
-		<meta property="og:image" content="<print meta=shareImage>">
 		<meta property="og:description" content="<print meta=seoDescription>">
+		<meta property="og:url" content="<print meta=canonical>">
 		<meta property="og:site_name" content="<print meta=seoTitle>">
-		<meta property="og:locale" content="en-au">
-		<meta name="twitter:card" content="summary">
-		<meta name="twitter:site" content="<print meta=seoTitle>">
-		<meta name="twitter:creator" content="<print meta=author>">
-		<meta name="twitter:url" content="<print meta=canonical>">
+		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="<print meta=seoTitle>">
 		<meta name="twitter:description" content="<print meta=seoDescription>">
-		<meta name="twitter:image" content="<print meta=shareImage>">
 		<link rel="publisher" href="<print meta=url>">
 		<link rel="home" href="<print meta=url>" title="Home page">
 		<link rel="stylesheet" type="text/css" href="<print theme>/css/bootstrap.min.css">
