--- a/layout/default/side_menu.html
+++ b/layout/default/side_menu.html
@@ -76,7 +76,7 @@
 				<div class="list-group mb-4">
 					<items>
 						<a class="list-group-item" href="<print link>" itemscope>
-							<span class="list-group-item-heading h3 text-truncate" itemprop="headline"><print content="title"></span>
+							<span class="list-group-item-heading h4" itemprop="headline"><print content="title"></span>
 							<meta itemprop="datePublished" content="<print metaDate>">
 							<p class="list-group-item-text mt-n3">
 								<small><small><small class="text-muted"><print time></small></small></small><br>
