--- a/layout/default/content.html
+++ b/layout/default/content.html
@@ -79,6 +79,26 @@
 							</div>
 						</div>
 					</author>
+					<related itemCount="4">
+						<div class="card mb-5">
+							<div class="card-header border-0 font-weight-bold">Related content</div>
+							<div class="card-body">
+								<div class="row">
+									<relitems>
+										<div class="col-6 col-sm-3 mb-3 mb-sm-5 d-flex align-items-stretch">
+											<a class="card overflow-hidden" href="<print related=linktitle>">
+												<img class="card-img-top img-fluid related" src="<print related=thumb>" alt="<print related=imageALT>">
+												<span class="card-body text-center p-1" data-contenttype="<print related=contentType>">
+													<span class="card-title"><print related="title"></span>
+												</span>
+												<div class="corner-ribbon small top-right text-uppercase font-weight-bold shadow"><print related="contentType"></div>
+											</a>
+										</div>
+									</relitems>
+								</div>
+							</div>
+						</div>
+					</related>
 					<review>
 						<div class="card hreview-aggregate">
 							<json-ld-review>
