--- a/layout/default/css/style.css
+++ b/layout/default/css/style.css
@@ -133,10 +133,15 @@ footer .theme .libre{margin:0 5px}
 .custom-file-label.outline-dark::after{background-color:#fff;color:#343a40;border-color:#343a40}
 /* Corner Styles <div class="corner-ribbon bottom-right sticky green shadow">Hello</div> */  
 .corner-ribbon{width:200px;background:#f8f9fa;position:absolute;top:15px;left:-70px;text-align:center;font-size:.5em;line-height:30px;letter-spacing:1px;color:#212529;transform:rotate(-45deg);-webkit-transform:rotate(-45deg)}
+.corner-ribbon.small{top:5px;left:-30px;line-height:20px}
 .corner-ribbon.top-left{top:15px;left:-70px;transform:rotate(-45deg);-webkit-transform:rotate(-45deg)}
+.corner-ribbon.small.top-left{top:15px;left:-80px;transform:rotate(-45deg);-webkit-transform:rotate(-45deg)}
 .corner-ribbon.top-right{top:15px;right:-70px;left:auto;transform:rotate(45deg);-webkit-transform:rotate(45deg)}
+.corner-ribbon.small.top-right{top:15px;right:-80px;left:auto;transform:rotate(45deg);-webkit-transform:rotate(45deg)}
 .corner-ribbon.bottom-left{top:auto;bottom:15px;left:-70px;transform:rotate(45deg);-webkit-transform:rotate(45deg)}
+.corner-ribbon.small.bottom-left{top:auto;bottom:15px;left:-80px;transform:rotate(45deg);-webkit-transform:rotate(45deg)}
 .corner-ribbon.bottom-right{top:auto;right:-70px;bottom:15px;left:auto;transform:rotate(-45deg);-webkit-transform:rotate(-45deg)}
+.corner-ribbon.small.bottom-right{top:auto;right:-80px;bottom:15px;left:auto;transform:rotate(-45deg);-webkit-transform:rotate(-45deg)}
 .corner-ribbon.black{background:#333;color:#fff}
 .corner-ribbon.danger{background:#dc3545;color:#fff}
 .corner-ribbon.dark{background:#343a40;color:#fff}
