--- a/layout/default/header.html
+++ b/layout/default/header.html
@@ -4,7 +4,8 @@
 		<div class="collapse navbar-collapse" id="admin-collapse">
 			<ul class="navbar-nav ml-auto">
 				<seohelper>
-					<li class="nav-item"><button class="btn btn-danger btn-sm mt-1" onclick="$('head').toggleClass('metashow');">Show Meta</button></li>
+					<li class="nav-item"><button class="btn btn-danger btn-sm m-1" onclick="$('head').toggleClass('metashow');">Show Meta</button></li>
+					<li class="nav-item"><button class="btn btn-danger btn-sm m-1" onclick="$('body').toggleClass('depth');">Show Elements Depth</button></li>
 				</seohelper>
 				<li class="nav-item<print active=proofs>"><a class="nav-link" href="proofs">Proofs</a></li>
 				<li class="nav-item<print active=orders>"><a class="nav-link" href="orders">Orders</a></li>
