--- a/layout/default/index.html
+++ b/layout/default/index.html
@@ -41,20 +41,20 @@
 	</div>
 	<div class="jumbotron jumbotron-fluid">
 	  <div class="container">
-	    <h1 class="display-4">Fluid jumbotron</h1>
+	    <h2 class="h1 display-4">Fluid jumbotron</h2>
 	    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
 	  </div>
 	</div>
 	<settings items="4" contenttype="all">
 	<div class="container mt-5">
-		<h1 class="h3">Latest Content Additions</h1>
+		<h2 class="h3">Latest Content Additions</h2>
 		<div class="row m-0 p-0">
 			<items>
 				<article class="col-12 col-sm-3 d-flex align-items-stretch mt-2 mb-2">
 					<div class="card w-100 overflow-hidden">
 						<a href="<print content=linktitle>"><img class="card-img-top home" src="<print content=thumb>" alt="<print content=imageALT>"></a>
      				<div class="card-body d-flex flex-column">
-							<h2 class="card-title h5 mt-0 text-uppercase"><a href="<print content=linktitle>"><print content="title"></a></h2>
+							<h3 class="card-title h5 mt-0 text-uppercase"><a href="<print content=linktitle>"><print content="title"></a></h3>
 							<div class="card-text mb-2 text-truncate"><print content="notes"></div>
 							<controls>
 								<view>
@@ -71,14 +71,14 @@
 		</div>
 	</div>
 	<div class="container mt-5">
-		<h1 class="h3">Shop by Category</h1>
+		<h2 class="h3">Shop by Category</h2>
 		<div class="row m-0 p-0">
 			<categories>
 				<div class="col-12 col-sm-3 d-flex align-items-stretch my-2">
 					<div class="card">
 						<a href="<print category=link>"><img class="card-img-top home" src="<print category=image>" alt="<print category=title>"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title h5 mt-0 text-uppercase"><a href="<print category=link>"><print category="title"></a></h2>
+							<h3 class="card-title h5 mt-0 text-uppercase"><a href="<print category=link>"><print category="title"></a></h3>
 						</div>
 					</div>
 				</div>
@@ -92,7 +92,7 @@
 		<div class="container">
 			<div class="row mt-5 p-4">
 				<div class="col-12">
-					<h1 class="h2 text-center w-100 mb-2 text-uppercase"><strong><a href="testimonials/">Testimonials</a> <small>Our Clients Love Us!</small></strong></h1>
+					<h2 class="text-center w-100 mb-2 text-uppercase"><strong><a href="testimonials/">Testimonials</a> <small>Our Clients Love Us!</small></strong></h2>
 					<div id="testimonials" class="carousel slide" data-ride="carousel">
 						<ol class="carousel-indicators d-none">
 			      	<li data-target="#testimonials" data-slide-to="0" class="active"></li>
@@ -106,8 +106,8 @@
 									<div class="img-box p-1 border rounded-circle m-auto">
 										<img class="d-block rounded-circle m-auto" src="<print content=avatar>" alt="<print content=name>">
 									</div>
-									<h2 class="h5 mt-4 mb-0" itemprop="author"><span><print content="name"></span></h2>
-									<h3 class="h6"><strong><print content="business"></strong></h3>
+									<h3 class="h5 mt-4 mb-0" itemprop="author"><span><print content="name"></span></h3>
+									<h4 class="h6"><strong><print content="business"></strong></h4>
 									<p class="col-8 m-0 pt-3 text-center m-auto"><print content="notes"></p>
 			      		</div>
 							</items>
