--- a/layout/default/meta_footer.html
+++ b/layout/default/meta_footer.html
@@ -1,6 +1,8 @@
 		<script src="<print theme>/js/jquery.min.js"></script>
 		<script src="<print theme>/js/bootstrap.min.js"></script>
 		<script src="<print theme>/js/jquery.fancybox.min.js"></script>
+		<jshelper>
 		<script src="<print theme>/js/js.js"></script>
+		<jsrunner>
 	</body>
 </html>
