--- a/core/css/style.css
+++ b/core/css/style.css
@@ -1,8 +1,7 @@
 .login{position:relative;display:flex;justify-content:center;flex-direction:column;box-shadow:0 4px 8px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);-webkit-box-shadow:0 4px 8px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19);-moz-box-shadow:0 4px 8px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19)}
 .brand_logo_container{position:absolute;top:-25px}
 .brand_logo{margin-left:6px;width:200px}
-.fc .fc-toolbar button,
-.pace{-webkit-user-select:none;-moz-user-select:none}
+.fc .fc-toolbar button{-webkit-user-select:none;-moz-user-select:none}
 #toast-container>div,
 .browser-stats,
 .ladda-button[data-style=contract-overlay],
@@ -15,28 +14,8 @@
 .ladda-button[data-style=zoom-in],
 .ladda-button[data-style=zoom-out],
 .popover.media .mediaicon{overflow:hidden}
-.pace{-webkit-pointer-events:none;pointer-events:none;user-select:none}
-.pace-inactive{display:none}
-.pace .pace-progress{background:#f40;position:fixed;z-index:2000;top:0;right:100%;width:100%;height:2px}
-.pace .pace-progress-inner{display:block;position:absolute;right:0;width:100px;height:100%;box-shadow:0 0 10px #f40,0 0 5px #f40;opacity:1;-webkit-transform:rotate(3deg) translate(0,-4px);-moz-transform:rotate(3deg) translate(0,-4px);-ms-transform:rotate(3deg) translate(0,-4px);-o-transform:rotate(3deg) translate(0,-4px);transform:rotate(3deg) translate(0,-4px)}
-.pace .pace-activity{display:block;position:fixed;z-index:2000;top:15px;right:15px;width:30px;height:30px;border:3px solid transparent;border-top-color:#f40;border-left-color:#f40;border-radius:30px;-webkit-animation:pace-spinner .4s linear infinite;-moz-animation:pace-spinner .4s linear infinite;-ms-animation:pace-spinner .4s linear infinite;-o-animation:pace-spinner .4s linear infinite;animation:pace-spinner .4s linear infinite}
 .media-gallery .card-img{width:100%;max-height:6rem;object-fit:cover;object-position:top}
 .media-gallery .btn-group{position:absolute;top:0;right:0}pre{width:100%;color:#fff;white-space:pre-wrap;white-space:-moz-pre-wrap!important;white-space:-pre-wrap;white-space:-o-pre-wrap;word-wrap:break-word}
-@-webkit-keyframes pace-spinner{
-  0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}
-}
-@-moz-keyframes pace-spinner{
-  0%{-moz-transform:rotate(0);transform:rotate(0)}100%{-moz-transform:rotate(360deg);transform:rotate(360deg)}
-}
-@-o-keyframes pace-spinner{
-  0%{-o-transform:rotate(0);transform:rotate(0)}100%{-o-transform:rotate(360deg);transform:rotate(360deg)}
-}
-@-ms-keyframes pace-spinner{
-  0%{-ms-transform:rotate(0);transform:rotate(0)}100%{-ms-transform:rotate(360deg);transform:rotate(360deg)}
-}
-@keyframes pace-spinner{
-  0%{transform:rotate(0)}100%{transform:rotate(360deg)}
-}
 #google-title{position:relative;font-family:"Arial";font-size:18px;color:#1a0dab!important}
 #google-title.contentType:before{
   content:attr(data-contentType);
@@ -326,3 +305,79 @@ button.close{padding:0;cursor:pointer;background:0 0;border:0;-webkit-appearance
 #searchbox .searchclose{position:absolute;top:10px;right:10px;font-size:3em}
 #searchbox .searchclose a{color:#888}
 #searchbox .searchclose a:hover{color:#ccc;text-decoration:none}
+
+.chat .chatList{
+  border-right:0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.chat .chatBody{
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+#chatScreen{
+  position:relative;
+  height: auto;
+  min-height: calc(100% - 93px);
+  max-height: calc(100% - 93px);
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+#chatScreen:empty:after{
+  content:attr(data-empty);
+  position:absolute;
+  top:100px;
+  width:100%;
+  text-align:center;
+  font-size:30px;
+  font-family:Arial;
+  color:#888;
+}
+#chatScreen::-webkit-scrollbar {
+  width: 8px;
+  background: transparent;
+}
+#chatScreen::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+#chatScreen ul li {
+  display: inline-block;
+  clear: both;
+  float: left;
+  margin: 10px 10px 5px 0;
+  width: calc(100% - 25px);
+  font-size: 0.9em;
+}
+#chatScreen ul li:nth-last-child(1) {
+  margin-bottom: 5px;
+}
+#chatScreen ul li.page img {
+  margin: 6px 8px 0 0;
+}
+#chatScreen ul li.page p {
+  background: #c8ced3;
+  color: #000;
+}
+#chatScreen ul li.admin img {
+  float: right;
+  margin: 6px 0 0 8px;
+}
+#chatScreen ul li.admin p {
+  background: #e4e7ea;
+  color:#000;
+  float: right;
+}
+#chatScreen ul li img {
+  width: 32px;
+  border-radius: 50%;
+  float: left;
+}
+#chatScreen ul li p {
+  display: inline-block;
+  padding: 10px 15px;
+  border-radius: 20px;
+  max-width: 80%;
+  line-height: 130%;
+}
