--- a/layout/default/meta_footer.html
+++ b/layout/default/meta_footer.html
@@ -4,5 +4,106 @@
 		<jshelper>
 		<script src="<print theme>/js/js.js"></script>
 		<jsrunner>
+		<chatscript>
+			<script>
+				function updateChat(){
+					chatTimer=null;
+					$.ajax({
+						type:"POST",
+						url:"core/chat.php",
+						data:{
+							sid:$('#chatsid').val()
+						}
+					}).done(function(data){
+						if(data!='none'){
+							$("#chatScreen").html(data);
+							if(data!='')$('#chatBody').removeClass('d-none');
+							document.getElementById('chatScreen').scrollTop=9999999;
+						}
+					});
+					clearTimeout(chatTimer);
+					chatTimer=setTimeout(function(){
+						updateChat();
+					},2500);
+				}
+				function initChat(){
+					chatTimer=null;
+					$.ajax({
+						type:"POST",
+						url:"core/chat.php",
+						data:{
+							sid:$('#chatsid').val()
+						}
+					}).done(function(data){
+						if(data!='none'){
+							$("#chatScreen").html(data);
+							if(data!='')$('#chatBody').removeClass('d-none');
+							if($('#chatBody').hasClass('d-none')){
+								clearTimeout(chatTimer);
+							}else{
+								$('.chathideme').addClass('d-none');
+								$('.chatunhideme').removeClass('d-none');
+								clearTimeout(chatTimer);
+							}
+						}
+						document.getElementById('chatScreen').scrollTop=9999999;
+					});
+				}
+				$(document).ready(function(){
+					initChat();
+					$("#chatHeader").click(function(e){
+						$('#chatBody').toggleClass('d-none');
+						if($('#chatBody').hasClass('d-none')){
+							clearTimeout(chatTimer);
+						}
+					});
+					$('#startChat').click(function(){
+						$.ajax({
+							type:"POST",
+							url:"core/chat.php",
+							data:{
+								sid:$('#chatsid').val(),
+								who:$('#chatwho').val(),
+								name:$('#chatName').val(),
+								email:$('#chatEmail').val(),
+								message:'|*|*|*|*|*|'
+							}
+						}).done(function(data){
+							if(data=='available'){
+								$("#chatScreen").html('<ul><li class="admin"><p>Hello '+$('#chatName').val()+', how can we assist you?</p></li></ul>');
+							}else{
+								$('#chatScreen').html(data);
+							}
+							document.getElementById('chatScreen').scrollTop=9999999;
+							$("#chatMessage").val("");
+							$('.chathideme').addClass('d-none');
+							$('.chatunhideme').removeClass('d-none');
+							clearTimeout(chatTimer);
+						});
+					});
+					$("#chatButton").click(function(){
+						$.ajax({
+							type:"POST",
+							url:"core/chat.php",
+							data:{
+								sid:$('#chatsid').val(),
+								who:$('#chatwho').val(),
+								name:$('#chatName').val(),
+								email:$('#chatEmail').val(),
+								message:$("#chatMessage").val()
+							}
+						}).done(function(data){
+							$("#chatScreen").html(data);
+							document.getElementById('chatScreen').scrollTop=9999999;
+							$("#chatMessage").val("");
+							clearTimeout(chatTimer);
+							chatTimer=setTimeout(function(){
+								updateChat();
+							},2500);
+						});
+					});
+				});
+			</script>
+		</chatscript>
 	</body>
 </html>
