Update to v0.0.6, check CHANGELOG.md for changes.

--- a/layout/default/index.html
+++ b/layout/default/index.html
@@ -5,14 +5,14 @@
 	<div class="jumbotron" style="<print page=cover>"><print page="coverVideo"></div>
 	<div class="container">
 		<div class="row my-5">
-			<main id="content" class="col-12 col-sm-9">
+			<main id="content" class="col-12 col-sm-9" data-aos="zoom-in-up">
 				<div class="card">
 					<div class="card-body">
 						<print page="notes">
 					</div>
 				</div>
 			</main>
-			<aside class="col-12 col-sm-3 mt-3 mt-sm-0">
+			<aside class="col-12 col-sm-3 mt-3 mt-sm-0" data-aos="zoom-in-up">
 				<div id="newsletters" class="list-group">
 					<form id="newslettersform" class="list-group-item" method="post" action="core/add_subscriber.php">
 						<input type="hidden" name="emailtrap" value="none">
@@ -39,14 +39,14 @@
 			</aside>
 		</div>
 	</div>
-	<div class="jumbotron jumbotron-fluid">
+	<div class="jumbotron jumbotron-fluid" data-aos="zoom-in-up">
 	  <div class="container">
 	    <h2 class="h1 display-4">Fluid jumbotron</h2>
 	    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
 	  </div>
 	</div>
 	<settings items="4" contenttype="all">
-	<div class="container mt-5">
+	<div class="container mt-5" data-aos="zoom-in-up">
 		<h2 class="h3">Latest Content Additions</h2>
 		<div class="row m-0 p-0">
 			<items>
@@ -70,7 +70,7 @@
 			</items>
 		</div>
 	</div>
-	<div class="container mt-5">
+	<div class="container mt-5" data-aos="zoom-in-up">
 		<h2 class="h3">Shop by Category</h2>
 		<div class="row m-0 p-0">
 			<categories>
@@ -88,7 +88,7 @@
 </block>
 <block inbed="testimonials">
 	<settings items="5">
-	<div class="testimonials">
+	<div class="testimonials" data-aos="zoom-in-up">
 		<div class="container">
 			<div class="row mt-5 p-4">
 				<div class="col-12">
