--- a/layout/default/meta_head.html
+++ b/layout/default/meta_head.html
@@ -34,6 +34,7 @@
 		<link rel="stylesheet" type="text/css" href="<print theme>/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="<print theme>/css/libreicons-svg.css">
 		<link rel="stylesheet" type="text/css" href="<print theme>/css/jquery.fancybox.min.css">
+		<link rel="stylesheet" type="text/css" href="<print theme>/css/aos.css">
 		<link rel="stylesheet" type="text/css" href="<print theme>/css/style.css">
 		<meta_helper>
 		<google_analytics>
